update properties add some config for hibernate and for the app

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,1 +1,14 @@
 spring.application.name=ticketVol
+
+#postgres credentials
+spring.datasource.url=jdbc:postgresql://localhost:5432/ticket_vol
+spring.datasource.username=postgres
+spring.datasource.password=2004
+
+spring.jpa.hibernate.ddl-auto=update
+spring.jpa.show-sql=true
+spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.PostgreSQLDialect
+
+
+
+
